--- a/ServiceDB/ServiceDB.csproj
+++ b/ServiceDB/ServiceDB.csproj
@@ -45,8 +45,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entity\BaseObject.cs" />
+    <Compile Include="Entity\MS_EXCEL_RATE.cs" />
     <Compile Include="Entity\MS_CONFIGURATION.cs" />
     <Compile Include="Entity\MS_CARRIER.cs" />
+    <Compile Include="Service\CarrierService.cs" />
     <Compile Include="Service\ConfigService.cs" />
     <Compile Include="Service\UserService.cs" />
     <Compile Include="Service\SQLExtendObject.cs" />
