Not merge code from app to web
Jus copy and paste

--- a/Freight/Freight1.csproj
+++ b/Freight/Freight1.csproj
@@ -47,6 +47,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EPPlus">
+      <HintPath>..\..\..\MM-RFID-Web-Backend\code\MM_RFID_API_Backend\bin\EPPlus.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
