--- a/Freight/Freight1.csproj
+++ b/Freight/Freight1.csproj
@@ -151,6 +151,11 @@
     </Compile>
     <Compile Include="Models\LoginerModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RestApi\BaseCarrier.cs" />
+    <Compile Include="RestApi\CarrierManager.cs" />
+    <Compile Include="RestApi\DHLCarrier.cs" />
+    <Compile Include="RestApi\ExcelManager.cs" />
+    <Compile Include="RestApi\FedExCarrier.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -297,6 +302,8 @@
     <Content Include="Views\Calculator\Index.cshtml" />
     <Content Include="Views\UploadRate\Index.cshtml" />
     <Content Include="Views\_Header.cshtml" />
+    <Content Include="UploadFolder\DHL_Ratecard_010121.xlsx" />
+    <Content Include="UploadFolder\FedEx_Ratecard_010121.xlsx" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
