update module user and api

--- a/ServiceDB/ServiceDB.csproj
+++ b/ServiceDB/ServiceDB.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Service\SQLExtendObject.cs" />
     <Compile Include="Service\BaseService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\SurchargeService.cs" />
     <Compile Include="Service\UtilityService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
