--- a/Freight/FreightRatePortal.csproj
+++ b/Freight/FreightRatePortal.csproj
@@ -164,6 +164,7 @@
     <Compile Include="RestApi\FedExCarrier.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="assets\logo.png" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
@@ -278,6 +279,7 @@
     <Content Include="Scripts\umd\popper-utils.min.js" />
     <Content Include="Scripts\umd\popper.js" />
     <Content Include="Scripts\umd\popper.min.js" />
+    <Content Include="Style\custom.css" />
     <Content Include="Style\login.css" />
     <Content Include="Style\navbar.css" />
     <Content Include="Style\sidebar.css" />
