--- a/Freight/FreightRatePortal.csproj
+++ b/Freight/FreightRatePortal.csproj
@@ -145,6 +145,7 @@
     <Compile Include="App_Start\JsonObject.cs" />
     <Compile Include="App_Start\MessageLogging.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="App_Start\SendAlertEmail.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\CalculatorController.cs" />
@@ -321,6 +322,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="EmailFolder\" />
+    <Folder Include="Logs\" />
     <Folder Include="TemplateFile\" />
   </ItemGroup>
   <ItemGroup>
