--- a/Freight/Web.config
+++ b/Freight/Web.config
@@ -14,6 +14,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="DebugMode" value="1" />
+    <add key="URL" value="" />
+    <add key="LogFolder" value="" />
     <add key="API_OFFICE365" value="http://10.51.2.5/UAT/MM_AUTHENTICATION/O365.svc/" />
   </appSettings>
   <system.web>
