--- a/Freight/Web - Copy.config
+++ b/Freight/Web - Copy.config
@@ -7,14 +7,14 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="DebugMode" value="1" />
-    <add key="URL" value="" />
+    <add key="URL" value="http://localhost:44364/" />
     <add key="LogFolder" value="" />
     <add key="API_OFFICE365" value="http://10.51.2.5/UAT/MM_AUTHENTICATION/O365.svc/" />
   </appSettings>
@@ -60,7 +60,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <system.webServer>
+<system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
@@ -79,7 +79,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="FREIGHT_RATE" connectionString="Data source=.\SQLEXPRESS2014;initial catalog=WEB_FREIGHT_RATE;integrated security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
-    <add name="ftestEntities" connectionString="metadata=res://*/Models.Freight_Db.csdl|res://*/Models.Freight_Db.ssdl|res://*/Models.Freight_Db.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SRV\SQLEXPRESS01;initial catalog=ftest;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="FREIGHT_RATE" connectionString="Data Source=SQL5059.site4now.net;Initial Catalog=db_9a9cca_freight;User Id=db_9a9cca_freight_admin;Password=Vbn*34295;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
