update login and change the template

--- a/Freight/Web.config
+++ b/Freight/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="DebugMode" value="1" />
     <add key="URL" value="" />
-    <add key="LogFolder" value="" />
+    <add key="LogFolder" value="C:\Logs" />
     <add key="API_OFFICE365" value="http://10.51.2.5/UAT/MM_AUTHENTICATION/O365.svc/" />
   </appSettings>
   <system.web>
