--- a/Freight/Web.config
+++ b/Freight/Web.config
@@ -80,6 +80,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="FREIGHT_RATE" connectionString="Data source=.\SQLEXPRESS2014;initial catalog=WEB_FREIGHT_RATE;integrated security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
-    <add name="ftestEntities" connectionString="metadata=res://*/Models.Freight_Db.csdl|res://*/Models.Freight_Db.ssdl|res://*/Models.Freight_Db.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SRV\SQLEXPRESS01;initial catalog=ftest;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+	<add name="ftestEntities" connectionString="metadata=res://*/Models.Freight_Db.csdl|res://*/Models.Freight_Db.ssdl|res://*/Models.Freight_Db.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SRV\SQLEXPRESS01;initial catalog=ftest;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	<add name="WEB_FREIGHT_RATE_DEVEntities" connectionString="metadata=res://*/Models.Freight_DbContext.csdl|res://*/Models.Freight_DbContext.ssdl|res://*/Models.Freight_DbContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SRV\SQLEXPRESS01;initial catalog=WEB_FREIGHT_RATE_DEV;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
