--- a/Freight/Web.config
+++ b/Freight/Web.config
@@ -21,6 +21,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <sessionState timeout="120"></sessionState>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
